--- a/install/linux/docker-compose.yml
+++ b/install/linux/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       dockerfile: install/linux/Dockerfile
     container_name: kweebec-manager
     restart: unless-stopped
-    ports:
-      - "5500:5500"
+    network_mode: host
     environment:
       - HOST=0.0.0.0
       - PORT=5500
@@ -19,9 +18,9 @@ services:
       - BACKUPS_DIR=/backups
       - RUST_LOG=info
     volumes:
-      - /your_path/data:/data
-      - /your_path/servers:/servers
-      - /your_path/backups:/backups
+      - ./data:/data
+      - ./servers:/servers
+      - ./backups:/backups
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5500/api/v1/settings"]
       interval: 30s
