--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "kweebec-manager"
+name = "draveur-manager"
 version = "0.1.0"
 edition = "2021"
-authors = ["Maxim <contact@kweebec.dev>"]
+authors = ["Maxim <contact@draveur.dev>"]
 description = "A modern game server manager"
 license = "MIT"
-repository = "https://github.com/thefrcrazy/kweebec-manager"
+repository = "https://github.com/thefrcrazy/draveur-manager"
 
 [dependencies]
 # Web framework
@@ -59,5 +59,5 @@ regex = "1.12.2"
 actix-rt = "2"
 
 [[bin]]
-name = "kweebec"
+name = "draveur"
 path = "src/main.rs"
