feat: Ajoute des fonctionnalités complètes de gestion de fichiers (création, upload, suppression, renommage, copie, déplacement) pour les serveurs et optimise la compilation Docker.

--- a/install/linux/Dockerfile
+++ b/install/linux/Dockerfile
@@ -19,7 +19,7 @@ WORKDIR /app/backend
 COPY backend/Cargo.toml backend/Cargo.lock* ./
 COPY backend/src ./src
 
-RUN cargo build --release
+RUN nice -n 19 cargo build --release --jobs 2
 
 # ==========================================
 # Stage 3: Runtime
