feat: persist server metrics in SQLite for historical display
Backend:
- Add server_metrics table with index for efficient querying
- Add GET /servers/:id/metrics endpoint with period filter (1h, 6h, 1d, 7d)
- Record metrics every 30s when server is running
- Auto-cleanup metrics older than 7 days

Frontend:
- Load historical metrics from API on mount
- Combine historical data with real-time WebSocket updates
- Add serverId prop to ServerMetrics component
- Add MetricDataPoint and MetricsHistoryResponse types
- Add getServerMetrics() to ApiService
- Refactor ServerMetrics.scss to use design system mixins

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -39,6 +39,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 thiserror = "2"
 anyhow = "1.0"
+rand = "0.8"
 
 # HTTP client (for Discord webhooks, downloads)
 reqwest = { version = "0.12", features = ["json"] }
