fix: Mettre entre guillemets la valeur de DATABASE_URL dans le workflow CI/CD.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,7 +66,7 @@ jobs:
         working-directory: ./backend
         run: cargo test --verbose
         env:
-          DATABASE_URL: sqlite::memory:
+          DATABASE_URL: "sqlite::memory:"
 
   backend-security:
     name: Backend Security Audit
