--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,57 +68,6 @@ jobs:
         env:
           DATABASE_URL: "sqlite::memory:"
 
-  backend-security:
-    name: Backend Security Audit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install cargo-audit
-        run: cargo install cargo-audit --locked
-
-      - name: Run Security Audit
-        working-directory: ./backend
-        run: cargo audit
-        continue-on-error: true  # Don't fail the build, just report
-
-  backend-build:
-    name: Backend Build
-    runs-on: ubuntu-latest
-    needs: [backend-lint, backend-test]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache Cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            backend/target/
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-
-
-      - name: Build Release
-        working-directory: ./backend
-        run: cargo build --release
-
-      - name: Upload Backend Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-binary
-          path: backend/target/release/draveur
-          retention-days: 7
-
   # ==================== Frontend ====================
   frontend-lint:
     name: Frontend Lint
@@ -159,61 +108,11 @@ jobs:
         working-directory: ./frontend
         run: bun run build
 
-      - name: Upload Frontend Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-dist
-          path: frontend/dist
-          retention-days: 7
-
-  # ==================== Docker ====================
-  docker-build:
-    name: Docker Build
-    runs-on: ubuntu-latest
-    needs: [backend-build, frontend-build]
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download Backend Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-binary
-          path: backend/target/release/
-
-      - name: Download Frontend Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-dist
-          path: frontend/dist/
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build and Push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./install/linux/Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/draveur-manager:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/draveur-manager:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
   # ==================== Deploy ====================
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: [docker-build]
+    needs: [backend-lint, backend-test, frontend-build]
     if: github.ref == 'refs/heads/main'
     environment: production
     steps:
@@ -224,15 +123,18 @@ jobs:
           username: ${{ secrets.PRODUCTION_USER }}
           key: ${{ secrets.PRODUCTION_SSH_KEY }}
           script: |
-            cd /opt/draveur-manager
-            docker compose pull
-            docker compose up -d
+            cd ${{ secrets.PRODUCTION_PATH }}
+            echo "📥 Pulling latest code..."
+            git pull origin main
+            echo "🔨 Building and deploying..."
+            docker compose -f install/linux/docker-compose.yml up -d --build
             docker system prune -f
             echo "✅ Deployment completed at $(date)"
 
       - name: Notify Discord (Success)
-        if: success()
+        if: success() && secrets.DISCORD_WEBHOOK != ''
         uses: sarisia/actions-status-discord@v1
+        continue-on-error: true
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
@@ -241,8 +143,9 @@ jobs:
           color: 0x00ff00
 
       - name: Notify Discord (Failure)
-        if: failure()
+        if: failure() && secrets.DISCORD_WEBHOOK != ''
         uses: sarisia/actions-status-discord@v1
+        continue-on-error: true
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
