config: ajouter la variable d'environnement TZ pour définir le fuseau horaire.

--- a/install/linux/docker-compose.yml
+++ b/install/linux/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     restart: unless-stopped
     network_mode: host
     environment:
+      - TZ=Europe/Paris
       - HOST=0.0.0.0
       - PORT=5500
       - IS_DOCKER=true
