--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,7 +114,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend-lint, backend-test, frontend-build]
     if: github.ref == 'refs/heads/main'
-    environment: production
+    environment: draveur
     steps:
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
