--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -53,6 +53,7 @@ sysinfo = "0.33"
 lazy_static = "1.5"
 walkdir = "2.5.0"
 regex = "1.12.2"
+tokio-util = { version = "0.7.18", features = ["io"] }
 
 
 
