--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives"
   },
   "dependencies": {
+    "@types/uuid": "^11.0.0",
     "ansi-to-react": "^6.2.6",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
+    "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
