--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/thefrcrazy/draveur-manager"
 [dependencies]
 # Web framework
 axum = { version = "0.7", features = ["multipart", "ws", "macros"] }
+axum-server = { version = "0.7", features = ["tls-rustls"] }
 tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit", "catch-panic"] }
 mime = "0.3"
@@ -40,6 +41,7 @@ dotenvy = "0.15"
 thiserror = "2"
 anyhow = "1.0"
 rand = "0.8"
+rcgen = "0.13" # For self-signed certs
 
 # HTTP client (for Discord webhooks, downloads)
 reqwest = { version = "0.12", features = ["json"] }
