feat(deploy): HTTPS auto-signé par défaut en environnement Docker
Détails :
- Le backend détecte l'environnement Docker (IS_DOCKER) et active le TLS par défaut.
- Ajout de l'exception USE_HTTPS=false dans docker-compose.traefik.yml.
- Mise à jour du README.

--- a/install/linux/docker-compose.traefik.yml
+++ b/install/linux/docker-compose.traefik.yml
@@ -24,6 +24,7 @@ services:
       - BACKUPS_DIR=/backups
       - UPLOADS_DIR=/data/uploads
       - RUST_LOG=info
+      - USE_HTTPS=false
     volumes:
       - ../../data:/data
       - ../../servers:/servers
