--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/uuid": "^11.0.0",
     "ansi-to-react": "^6.2.6",
+    "cronstrue": "^3.11.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
