feat(core): refonte majeure de l'architecture asynchrone et renforcement de la sécurité
- Migration vers Tokio Process et lecture asynchrone des logs
- Sécurisation du filesystem (check path traversal, liens symboliques)
- Système de changement de mot de passe forcé à la première connexion
- Génération automatique de mots de passe sécurisés pour les nouveaux utilisateurs
- Support des expressions Cron complètes et sauvegardes asynchrones
- Amélioration UI : smart scroll console, zone de drop FTP et détection Java
- Mise à jour de la roadmap V1

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -56,6 +56,7 @@ lazy_static = "1.5"
 walkdir = "2.5.0"
 regex = "1.12.2"
 tokio-util = { version = "0.7.18", features = ["io"] }
+cron = "0.15.0"
 
 
 
