fix(ci): ajout des binaires esbuild et assouplissement de l'installation bun

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Install Dependencies
         working-directory: ./frontend
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: Run Lint
         working-directory: ./frontend
@@ -102,7 +102,7 @@ jobs:
 
       - name: Install Dependencies
         working-directory: ./frontend
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: Build
         working-directory: ./frontend
